[package]
name = "qappctl-shim-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.1" 
pretty_env_logger = "0.4"
bytes = "1"
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"