[package]
name = "rust-hands-on"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.2", features = ["tokio"] }
tokio = { version = "1.35.1", features = ["full"] }
http-body-util = "0.1.0"
http-body = "1.0.0"
log = "0.4.17"
pretty_env_logger = "0.5"
bytes = "1"
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
matchit = "0.8.0"
tower = { version = "0.4.13", features = ["make", "util"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
pin-project-lite = "0.2.9"
futures-util = "0.3.26"
futures-core = "0.3.26"
base64 = { version = "0.22" }
