[package]
name = "car_demo_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hyper_wasi = { git = "https://github.com/WasmEdge/hyper.git", rev = "1fcc180", features = ["full"] }
# hyper = { version = "0.14.24", features = ["full"] }
hyper_wasi = { version = "0.15.1", features = ["full"] }
# latest tokio_wasi from github will cause panic now
# tokio_wasi = { git = "https://github.com/WasmEdge/tokio.git", rev= "09fc456", features = ["io-util", "fs", "net", "time", "rt", "macros"] }
tokio_wasi = { version = "1", features = ["io-util", "fs", "net", "time", "rt", "macros"] }
# tokio = { version = "1", features = ["full"] }
# http-body-util = "0.1.0-rc.1" 
pretty_env_logger = "0.4"
bytes = "1"
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"